# ATS-V3

./: .clang-format  .clang-tidy  .cppcheck  .gitattributes  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ATS-V3.sln  ATS-V3.vcxproj  ATS-V3.vcxproj.filters  BUILD_STATUS.md  CMakeLists.txt  DEPENDENCIES_RESOLVED.md  Dockerfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  compile_commands.json  conanfile.txt  docker-compose.yml  main.cpp  package.json  test_main.cpp
.vooster/: project.json
backtest_analytics/: CMakeLists.txt
backtest_analytics/include/: ai_prediction_module.hpp  backtest_engine.hpp  data_loader.hpp  influxdb_storage.hpp  performance_metrics.hpp  version.hpp.in
backtest_analytics/src/: ai_prediction_module.cpp  backtest_engine.cpp  data_loader.cpp  influxdb_storage.cpp  performance_metrics.cpp
notification_service/: CMakeLists.txt
notification_service/examples/: notification_demo.cpp  simple_test.cpp
notification_service/include/: email_notification_service.hpp  notification_influxdb_storage.hpp  notification_settings_service.hpp  push_notification_service.hpp
notification_service/src/: email_notification_service.cpp  notification_influxdb_storage.cpp  notification_settings_service.cpp  notification_settings_utils.cpp  push_notification_service.cpp
price_collector/: CMakeLists.txt
price_collector/adapters/: binance_adapter.cpp  binance_adapter.hpp  bitfinex_adapter.cpp  bitfinex_adapter.hpp  coinbase_adapter.cpp  coinbase_adapter.hpp  kraken_adapter.cpp  kraken_adapter.hpp  upbit_adapter.cpp  upbit_adapter.hpp
price_collector/include/: exchange_interface.hpp  http_client.hpp  market_data_storage.hpp  performance_monitor.hpp  price_collector_service.hpp  websocket_client.hpp
price_collector/src/: http_client.cpp  market_data_storage.cpp  price_collector_service.cpp  websocket_client.cpp
risk_manager/: CMakeLists.txt
risk_manager/include/: enhanced_risk_manager.hpp
risk_manager/src/: enhanced_risk_manager.cpp  risk_manager_grpc_service.cpp
security/: CMakeLists.txt
security/include/: auth_manager.hpp  crypto_manager.hpp  rbac_manager.hpp  tls_manager.hpp  totp_manager.hpp
security/src/: auth_manager.cpp  crypto_manager.cpp  rbac_manager.cpp  tls_manager.cpp  totp_manager.cpp
shared/: CMakeLists.txt
shared/include/config/: config_manager.hpp
shared/include/exchange/: base_exchange_plugin.hpp  exchange_notification_system.hpp  exchange_plugin_interface.hpp  exchange_plugin_manager.hpp  failover_manager.hpp  resilient_exchange_adapter.hpp
shared/include/types/: common_types.hpp
shared/include/utils/: crypto_utils.hpp  influxdb_client.hpp  logger.hpp  prometheus_exporter.hpp  redis_client.hpp
shared/src/config/: config_manager.cpp  config_manager_original.cpp
shared/src/exchange/: base_exchange_plugin.cpp  exchange_notification_system.cpp  exchange_plugin_manager.cpp  failover_manager.cpp  (+2 more)
src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ats-v3-lib.vcxproj  ats-v3-lib.vcxproj.filters  main.cpp
src/core/: app_state.cpp  app_state.hpp  arbitrage_engine.cpp  arbitrage_engine.hpp  dependency_container.cpp  dependency_container.hpp  event.hpp  event_loop.cpp  event_loop.hpp  event_pusher.hpp  exceptions.hpp  opportunity_assessor.cpp  opportunity_assessor.hpp  opportunity_detector.cpp  opportunity_detector.hpp  portfolio_manager.cpp  portfolio_manager.hpp  price_monitor.cpp  price_monitor.hpp  price_provider.hpp  result.hpp  risk_manager.cpp  risk_manager.hpp  trade_executor.cpp  trade_executor.hpp  types.hpp
src/data/: database_manager.cpp  database_manager.hpp  market_data.cpp  market_data.hpp  price_cache.cpp  price_cache.hpp
src/exchange/: binance_api.cpp  binance_api.hpp  binance_exchange.cpp  binance_exchange.hpp  exchange_exception.hpp  exchange_factory.cpp  exchange_factory.hpp  exchange_interface.cpp  exchange_interface.hpp  upbit_exchange.cpp  upbit_exchange.hpp
src/monitoring/: health_check.cpp  health_check.hpp  performance_monitor.cpp  performance_monitor.hpp  system_monitor.cpp  system_monitor.hpp
src/network/: network_exception.hpp  rate_limiter.cpp  rate_limiter.hpp  rest_client.cpp  rest_client.hpp  websocket_client.cpp  websocket_client.hpp
src/utils/: atomic_counter.hpp  config_manager.cpp  config_manager.hpp  config_types.cpp  config_types.hpp  config_validator.cpp  config_validator.hpp  crypto_utils.cpp  crypto_utils.hpp  fallback_http.cpp  fallback_http.hpp  json_parser.cpp  json_parser.hpp  logger.cpp  logger.hpp  secure_config.cpp  secure_config.hpp  structured_logger.cpp  structured_logger.hpp  thread_pool.cpp  thread_pool.hpp  thread_safe_queue.hpp
tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ATS-V3-Tests.sln  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  run_tests.vcxproj  run_tests.vcxproj.filters  test_arbitrage_engine.cpp  test_exchange_failover.cpp  test_exchange_plugin_system.cpp  test_main.cpp  test_opportunity_detector.cpp  test_portfolio_manager.cpp  test_price_collector.cpp  test_price_monitor.cpp  test_risk_manager.cpp  test_security.cpp  test_shared_utils.cpp
tests/integration/: test_end_to_end.cpp  test_exchange_integration.cpp
tests/mocks/: mock_event_loop.hpp  mock_event_pusher.hpp  mock_exchange.hpp  mock_risk_manager.hpp  mock_trade_executor.hpp
trading_engine/: CMakeLists.txt
trading_engine/grpc/: trading_engine.proto  trading_engine_grpc_service.hpp
trading_engine/include/: exchange_trading_adapter.hpp  influxdb_client.hpp  order_router.hpp  redis_subscriber.hpp  rollback_manager.hpp  spread_calculator.hpp  trading_engine_mock.hpp  trading_engine_service.hpp
trading_engine/src/: exchange_trading_adapter.cpp  order_router.cpp  redis_subscriber.cpp  spread_calculator.cpp  trade_logger.cpp  trading_engine_service.cpp
trading_engine/tests/: trading_engine_integration_test.cpp
ui_dashboard/: CMakeLists.txt
ui_dashboard/include/: dashboard_application.hpp
ui_dashboard/qml/: main.qml
ui_dashboard/src/: dashboard_application.cpp  main.cpp
(+95 files in other folders)
